# agent-core-utils

./: .env.example  AGENT_COMMUNICATION_ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLIC_CODE_PLAYBOOK.md  README.md  SECURITY.md  UNIT_TESTS_SUMMARY.md  calendar_tools.py  debug_output.txt  location_tools.py  pyproject.toml  pytest.ini  setup.cfg  test_implementation.py
.github/workflows/: ci.yml  secret-scan.yml
agent_core_utils/: __init__.py  browser.py  calendar_tools.py  config.py  delegation.py  google_places.py  llm.py  location_tools.py  protocols.py  reasoning_tools.py  redis_streams.py  redis_utils.py  services.py  state_persistence.py
agent_core_utils/tools/: __init__.py  location_tools.py
tests/: conftest.py  test_agent_delegate.py  test_calendar_tools.py  test_config.py  test_delegation.py  test_integration.py  test_location_tools.py  test_protocols.py  test_reasoning_tools.py  test_redis_streams.py  test_redis_utils.py  test_services.py  test_state_persistence.py
